--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,9 @@ main {
   max-width: 400px;
   margin-inline: auto;
 
-  background-color: whitesmoke;
+  background-color: white;
   border-radius: 1rem;
-  box-shadow: 0px 0px 2px gray;
+  box-shadow: 0px 0px 2px var(--Dark-gray);
 
   display: flex;
   flex-direction: column;
@@ -72,7 +72,7 @@ main {
 }
 
 .avatar {
-  border: 5px solid whitesmoke;
+  border: 5px solid white;
   border-radius: 50%;
   margin-top: -3rem;
 
